--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -24,7 +24,7 @@
         <input
           matInput
           [formControl]="searchText"
-          placeholder="Digite o nome . . ."
+          placeholder="Digite o teu nome . . ."
         />
       </mat-form-field>
 
