--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -326,7 +326,7 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     background-color: #f9f9f9;
-    width: 80%;
+    width: 100%;
     justify-content: center;
     max-height: 400px; /* Limita a altura */
     overflow-y: auto; /* Habilita rolagem vertical */
@@ -349,7 +349,7 @@
     border: 1px solid #ddd;
     border-radius: 10px;
     padding: 10px;
-    width: 150px;
+    width: 180px;
     position: relative;
     background-color: white;
     transition: transform 0.2s, box-shadow 0.2s;
@@ -363,8 +363,8 @@
   .exibir-mais-button {
     margin-top: 10px;
     padding: 10px 20px;
-    //background-color: #007bff;
-    color: black;
+    background-color: black;
+    color: white;
     font-weight: bold;
     border: 2px solid blue;
     border-radius: 5px;
@@ -378,8 +378,8 @@
 
   .chaveiro-status {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 6px;
+    right: 6px;
     background-color: black;
     border-radius: 50%;
     width: 30px;
