feat: remover contact container

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -140,7 +140,7 @@
             class="exibir-mais-button"
             (click)="exibirMais()"
           >
-            Exibir mais
+            Carregar mais ...
           </button>
         </div>
       </div>
