--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -618,15 +618,27 @@
     }
   }
 
+  @media (max-width: 850px) {
+    .pedido {
+      margin-top: -60px;
+      margin-bottom: 100px;
+    }
+
+    .content img {
+      width: 40px;
+    }
+  }
+
   @media (max-width: 576px) {
     .pedido {
-      margin-top: 120px;
-      margin-bottom: -110px;
+      margin-top: 50px;
+      margin-bottom: 10px;
     }
 
     .content img {
       position: relative;
-      top: 40px;
+      width: 20px;
+      top: -20px;
     }
 
     .notification-container {
