--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -34,6 +34,13 @@
     margin-left: 20px;
   }
 
+  .your-key-icone {
+    color: white;
+    font-size: 25px;
+    padding-top: 5px;
+    margin-right: 6px;
+  }
+
   .pedido {
     width: 270px;
   }
@@ -100,7 +107,7 @@
         .dynamic_text {
           font-size: 24px;
           margin-top: 10px;
-          margin-left: -53px;
+          margin-left: -120px;
           position: absolute;
         }
       }
@@ -609,7 +616,7 @@
 
     .pedido {
       margin-top: 70px;
-      margin-bottom: -110px;
+      margin-bottom: 100px;
     }
 
     .home-components img {
@@ -623,9 +630,18 @@
       margin-top: -60px;
       margin-bottom: 100px;
     }
+  }
 
-    .content img {
-      width: 40px;
+  @media (max-width: 890px) {
+    .pedido {
+      margin-top: -40px;
+      margin-bottom: 100px;
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .pedido {
+      margin-top: 30px;
     }
   }
 
@@ -633,12 +649,6 @@
     .pedido {
       margin-top: 50px;
       margin-bottom: 10px;
-    }
-
-    .content img {
-      position: relative;
-      width: 20px;
-      top: -20px;
     }
 
     .notification-container {
