--- a/src/app/modules/gerencial/components/servicos/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/servicos/components/add/add.component.html
@@ -64,8 +64,8 @@
             <mat-label>Status</mat-label>
             <mat-icon matPrefix>info</mat-icon>
             <mat-select formControlName="status" required>
-              <mat-option value="ativo">Pronto</mat-option>
-              <mat-option value="inativo">Em andamento</mat-option>
+              <mat-option value="ativo">Disponível</mat-option>
+              <mat-option value="inativo">Indisponível</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
